change background color

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  --red-primary: #c41e3a;
-  --red-dark: #8b0000;
-  --red-light: #e74c3c;
+  --red-primary: #e63946;
+  --red-dark: #b71c1c;
+  --red-light: #ff6b6b;
   --gold-primary: #ffd700;
   --gold-light: #ffe44d;
   --gold-dark: #b8860b;
