change background color

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  --red-primary: #d32f2f;
-  --red-dark: #a51c1c;
-  --red-light: #ef4444;
+  --red-primary: #ae0924;
+  --red-dark: #700101;
+  --red-light: #dc3826;
   --gold-primary: #ffd700;
   --gold-light: #ffe44d;
   --gold-dark: #b8860b;
